"Bottoms up"	Contest is only won by Randolph if Rukhar does not notice someone has been to his chest.
"Cavalorn's old hut"	Only begins once NH finds the bag of ore, since before that the NH does not really have a task that he knows about.
"Finding Joe"	No longer has its own logged quest, since for all NH knows, he is just another missing person.
"I gotta get out of here!"	Requires Talbin to be escorted through the pass and he doesn't spawn on Bengars farm right away.
"Merchant raid"	Requires finding the bandits who took Erol's stone tablets, before returning any stone tablets.
"Quest for Lucia"	Is now just about delivering her note to Elvrich, after that she is just another missing person.
"Rescue Gorn"	Can only be finished after scouting at least one mining site.
"The Claw of Beliar"	Requires talking to Saturas before praying to Beliar and the option to destroy is only presented once then.
"The Seekers"	Can be finished by bringing all of the Almanacs to Pyrokar before leaving for Irdorath.
"The man with the eyepatch"	Cancels if the first treasure is not given to him.
"Unnerving Lurkers"	Cancels in chapter 4 if not finished, causing Kervo and Geppert to be killed by a lurker instead of disappearing.


	Monster

Young Wolves at the pass are now regular Wolves.


	NPCs General

Added ambient inventory for most NPCs alive or dead.
Added logging for pickpocket failures and successes.
Added pickpocketable items to NPCs inventories, except for traders.

Changed NPCs that are considered "tough" to ignore ranged weapons as well as melee.
Changed NPCs that are fleeing to ignore trespassing and not to engage in dialog while fleeing.
Changed NPCs that are thieves or complicit to ignore theft for Attila, Cassia, Halvor, Jesper, Kardif, Moe, Nagur, Ramirez, Rengaru, Sarah.
Changed NPCs to attack to kill for Girion, Parcival, Sylvio.
Changed NPCs to engage in small talk 50% less frequently.